# nanodistill

./: .gitignore  CLAUDE.md  IMPLEMENTATION_COMPLETE.md  README.md  fine_tune.py  pyproject.toml  test_trainer_params.py
.github/workflows/: release.yml  tests.yml
docs/: CHOOSING_STUDENT_MODEL.md  CODE_OF_CONDUCT.md  CONFIGURATION.md  CONTRIBUTING.md  IMPLEMENTATION_PLAN.md  MODEL_SETUP.md  QUICK_START.md  SECURITY.md  WORKFLOW.md
examples/: basic_usage.py  bring_your_own_data.py  inference_example.py  stock_sentiment_pydantic.py  using_qwen.py
scripts/: build
src/nanodistill/: __init__.py  config.py  core.py
src/nanodistill/amplifier/: __init__.py  pipeline.py
src/nanodistill/data/: __init__.py  formatter.py  loader.py
src/nanodistill/distiller/: __init__.py  trainer.py
src/nanodistill/teacher/: __init__.py  client.py  prompts.py  schemas.py
src/nanodistill/utils/: __init__.py  errors.py  schema.py
tests/: conftest.py  test_config.py  test_data.py  test_errors.py  test_teacher_schemas.py  test_training_data.py
